uasdm-web/src/main/ng2/src/styles/styles.scss
/* ... */
.tree-node-level-1 > tree-node-wrapper > .node-wrapper > .node-content-wrapper::before {
  display: none;
}

.tree-node-leaf > .node-wrapper > .node-content-wrapper::before {
  width: 25px;
}

.tree-children::after {
  border-left: 1px solid lightgrey;
  height: 100%;
  top: -15px;
  left: -15px;
}

tree-node:last-child > .tree-node > .tree-children::after {
  border-left: none;
}

.toggle-children {
  z-index: 1;
}




.node-content-wrapper{
  //background-color: lightgrey;
}
.node-content-wrapper:hover {
    background: #f2f2f2;
}
.node-content-wrapper-focused {
    background: lightgrey;
}



.tree-children {
    padding-left: 29px !important;
}

tree-node-expander{
  display: none !important;
}


.dropdown-menu {
  font-size: 18px;
}


.breadcrumb {
  padding: 2px;
  background-color: inherit;
  margin: 15px 0 0 0;
  font-size: 12px;
  font-weight: bold;
  color:#767676;
}
.breadcrumb li {
  font-weight: normal;
}
.breadcrumb li:last-child {
  font-weight: bold;
}

i.fa.fa-angle-left.breadcrumb-back-ico {
  font-weight: bold;
  vertical-align: bottom;
  margin-right: 5px;
}

.qq-upload-status-text-selector.qq-upload-status-text {
  float: right;
}

button.create-site-btn {
    margin-bottom: 10px;
    margin-top: 10px;

}

.error-modal{
    color: #a16969;
    font-size: 20px;
    padding: 50px 10px 38px 10px;
    border: solid 1px;
    background: rgba(255,255,255,.5);
}
.error-modal button {
    float: right;
}

#image-panel {
    position: absolute;
    width: 100%;
    background: rgba(255,255,255,.9);
    z-index: 999;
    bottom: 0;
    border-top: solid 1px lightgrey;
    // text-align: right;
}

.image-list-container {
    overflow-y: auto;
    height: 50vh;
    border-top: solid 1px lightgrey;
}
.image-list-container > .list-group {
    margin: 0;
}
.image-list-container .list-group .list-group-item {
    background-color: rgba(255,255,255,.5);
}

.image-thumbnail {
    width: 300px;
    height: 150px;
    border-right: 2px solid lightgrey;
}



a.thumbnail.active, 
a.thumbnail:focus, 
a.thumbnail:hover {
    border-color: #007276;
}

a.thumbnail.non-clickable:active,
a.thumbnail.non-clickable:hover,
a.thumbnail.non-clickable:focus {
  cursor: auto !important;
  border-color: #ddd !important;
}

.media {
    padding-left: 15px;
}
.media:first-child {
    margin-top: 15px;
}

.media .media-body {
    vertical-align: middle;
}

.product-info-modal {
  width: 75%;
}

.leaf-modal {
  width: 75%;
}

.image-preview {
    width: 100%;
    max-width: 900px;
    // height: 450px;
}

.image-preview-modal {
    // width: 90%;
    // height: 90%;
    position: relative;
    top: 50%;
    transform: translateY(-50%) !important;
}
.image-preview-modal > .modal-content {
    width: 100%;
    // height: 100%;
}

.image-preview-container {
    text-align: right;
}

.image-preview-container > .fa.fa-times.btn.btn-close {
        margin-right: -15px;
    margin-top: -15px;
}

.image-container {
    // margin-top: 20px;
}

.layer-toggle-input{
    line-height: 20px;
    height: 20px;
    margin: 0 !important;
    cursor: pointer;
    vertical-align: middle;
}
.layer-toggle-label {
    display: inline-block;
    margin: 0;
    vertical-align: middle;
}






// ----- //

a:hover,
a:active,
a.active {
  color: #007276;
}

.fa.expand-arrow-ico:hover {
    color: #007276;
    transform: rotate(270deg);
}
.fa.fa-pencil-alt:hover {
    color: #007276;
}


.form-control:focus {
    border-color: #66afe9;
    outline: 0;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,114,118,.6);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(0,114,118,.6);
}

.location-management-widget-section .search-input,
.location-management-widget-section > input[type="text"],
.submit-form input[type="text"].search-input {
    background: #ececec;
    border: none;
    border-radius: 0;
}

// .nav-tabs>li {
//   width: 50%;
// }
.nav-full-width .nav-tabs>li:only-child {
  width: 100%;
}
.nav-full-width .nav-tabs>li:first-child:nth-last-child(n + 2),
.nav-full-width .nav-tabs>li:first-child:nth-last-child(n + 2) ~ li {
  width: 50%;
}
.nav-full-width .nav-tabs>li:first-child:nth-last-child(n + 4),
.nav-full-width .nav-tabs>li:first-child:nth-last-child(n + 4) ~ li {
  width: 20%;
}

.nav-full-width .nav-tabs>li>a {
  color: grey;
  font-weight: bold;
  text-align: center;
  background-color: #ececec;
  border: none;
  margin: 0;
  border-radius: 0;
}

.nav-full-width .nav-tabs>li.active>a, 
.nav-full-width .nav-tabs>li.active>a:focus, 
.nav-full-width .nav-tabs>li.active>a:hover {
  color: #007276;
  background-color: #ececec;
  border: none;
  margin: 0;
  border-radius: 0;
}

// ul.nav.nav-tabs:before {
//   right: 0px;
//   background: #ececec;
//   content: '';
//   display: block;
//   position: absolute;
//   top: 0;
//   height: 40px;
//   width: 100%;
// }

.submit-form:before{
  right: 0px;
  background: white;
  content: '';
  display: block;
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;
}

.list-group-item {
    border: none;
    background: none;
}


/* === card component ====== 
 * Variation of the panel component
 * version 2018.10.30
 * https://codepen.io/jstneg/pen/EVKYZj
 */
.card{ background-color: #fff; border: 1px solid transparent; border-radius: 6px; }
.card .button-column.floating {background: rgba(255,255,255,.85);}
.card.clickable:hover{cursor:pointer;background-color: #f5f5f5;}
.card.clickable:hover .button-column {background: rgba(245,245,245,.85);}
.card.active {background-color: lightgrey;}
.card > .card-link{ color: #333; }
.card > .card-link:hover{  text-decoration: none; }
.card > .card-link .card-img img{ border-radius: 6px 6px 0 0; }
.card .card-img{ position: relative; padding: 0; display: table; }
.card .card-img .card-caption{
  position: absolute;
  right: 0;
  bottom: 16px;
  left: 0;
}
.card .card-body{ display: table; width: 100%; padding: 12px; }
.card .card-header{ border-radius: 6px 6px 0 0; padding: 8px; }
/* ... */

